# b2b

./: .env  .gitignore  Dockerfile  backend.7z  docker-compose.yml  requirements.txt  test_google.py
backend/: .dockerignore  .env  Dockerfile  Dockerfile.test  alembic.ini  celery_worker.py  docker-compose.yml  docker_test.py  pip.conf  pyproject.toml  requirements.txt  switch_search.sh  test_playwright.py  test_search.py  wait-for-db.sh
backend/app/: celery_worker.py  config.yml  database.py  db.py  main.py  models.py  routers.py
backend/app/api/: parser.py  search.py  test.py
backend/app/api/endpoints/: parser.py
backend/app/core/: config.py  database.py
backend/app/db/: session.py
backend/app/models/: __init__.py  company.py  product.py  query.py  result.py  search_result.py
backend/app/parser/: base.py  filter.py  main.py  models.py  optlist.py  parser.py  parser_config.py  parser_service.py  playwright_runner.py  scrape_emails.py  scraperapi_client.py  search_duckduckgo.py  search_engine.py  search_google.py  search_scraperapi.py  search_yandex.py  site_classifier.py  storage.py  utils.py
backend/app/parser/config/: parser_config.py
backend/app/parser/helpers/: captcha_solver.py  (+1 more)
backend/app/routers/: __init__.py  companies.py  parser.py  products.py  router_parser.py  search.py
backend/app/schemas/: query.py
backend/app/services/: parser.py
backend/migrations/: env.py
backend/migrations/versions/: 001_initial.py
backend/scripts/: populate_products.py
parser/: __init__.py  filter.py  parser.py  pyproject.toml  requirements.txt  setup.py
