[project]
name = "b2b-backend"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
sqlalchemy = "^2.0.25"
psycopg2-binary = "^2.9.9"
pydantic = "^2.6.4"
python-dotenv = "^1.0.1"
aiohttp = "^3.9.3"
celery = "^5.3.6"
redis = "^5.0.3"
httpx = "^0.27.0"
